--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-@import 'styles/base.css';
+@import "styles/base.css";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    @apply box-border;
+  }
+}
